...
                              mainAxisSize: MainAxisSize.min,
                              children: [
                                // Title
                                const Align(
                                  alignment: Alignment.centerLeft,
                                  child: Text(
                                    'Log In',
                                    style: TextStyle(
                                      color: Color(0xFF9610D4),
                                      fontSize: 45,
                                      fontWeight: FontWeight.w700,
                                    ),
                                  ),
...
